# raft-ik

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs  code-layout.kdl
.claude/agents/: critical-rust-implementation.md  high-availability-consensus.md
proto/: api.proto  raft.proto
proxy_server/: main.py
proxy_server/proto_api/: api_pb2.py  api_pb2_grpc.py
src/: api.rs  client.rs  error.rs  main.rs  node.rs
src/api/: api.rs  api_proto.rs  core_api.rs
src/client/: node_client.rs
src/node/: entry.rs  node.rs  node_client.rs  state.rs
src/raft/: server.rs
src/test/: hearbeat.hurl  info.hurl  new_command.hurl  vote.hurl
