[package]
name = "raft-ik"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
axum = "0.6.20"
dotenv = "0.15.0"
env_logger = "0.11.1"
log = "0.4.20"
prost = "0.12.4"
rand = "0.8.5"
reqwest = { version = "0.11.23", features = ["json", "blocking"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.112"
strum_macros = "0.26.1"
# strum_macros = "0.26.1"
tokio = { version = "1.35.1", features = ["full"] }
tonic = "0.11.0"
tonic-reflection = "0.11.0"

[build-dependencies]
tonic-build = "0.11.0"
